@@ -1,3 +1,9 @@
+2006-10-04 Magnus Hagdorn
+ * CF_IOmisc.py: add expontential temperature EIS forcing
+ * CF_options.py: add options to handle expontential temperature EIS forcing
+ * plotEISvar.py: use new temperature forcing
+ * plot_extent.py: plot key if we are plotting more than one file
+
 2005-10-03 Magnus Hagdorn
  * CF_options.py: improve help message somewhat
  * plotCFstats.py: add option to plot average ice thickness
